objects/OPP_OrderLink__c.object
<CustomObject>
    <description>september release - new object to attach an order to an opportunity</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BackOffice__c</fullName>
        <label>Legacy System</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <label>Business</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompletedDelivery__c</fullName>
        <label>Completed Delivery</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryService__c</fullName>
        <label>Delivery Service</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Express__c</fullName>
        <label>Express</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkToOrder__c</fullName>
        <formula>HYPERLINK(&apos;/apex/VFP37_OpportunityOrderConnector?id=&apos; +Id, &apos;Details&apos; ,&apos;_top&apos;)</formula>
        <label>Link to Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Order Links</relationshipLabel>
        <relationshipName>Order_Links</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>OrderAccountLegacyNumber__c</fullName>
        <label>Order Account Legacy Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderAccountName__c</fullName>
        <label>Order Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderCreationDate__c</fullName>
        <label>Order creation date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OrderDeliveryDate__c</fullName>
        <label>Order Delivery Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OrderEnteredBy__c</fullName>
        <label>Order Entered by</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderPlacedThrough__c</fullName>
        <label>Order Placed Through</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderPrimaryContact__c</fullName>
        <label>Order Primary Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderTracking__c</fullName>
        <label>Order Tracking</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PONumber__c</fullName>
        <label>PO Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequiredDelivery__c</fullName>
        <label>Required Delivery</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEOrderReference__c</fullName>
        <label>SE Order Reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipTo__c</fullName>
        <label>Ship To Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SoldTo__c</fullName>
        <label>Sold To Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpecialTerms__c</fullName>
        <label>Special Terms</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThirdPartyAddress__c</fullName>
        <label>Third Party delivery address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bFOAccountID__c</fullName>
        <description>field to store the ID of the Account related to this OrderLink</description>
        <label>bFOAccountID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Order Link</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SE Order Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>